Fix reaction buttons on mobile

--- a/app/(home)/cast.module.css
+++ b/app/(home)/cast.module.css
@@ -46,6 +46,7 @@
 }
 
 .reaction > button {
+  padding: 0;
   cursor: pointer;
   background: none;
   border: 0;
